# GraphicsViewTests

./: CMakeLists.txt  lapinGridBenchmarkSize.json
GraphicsViewTests/: BenchmarkStuff.cpp  BenchmarkStuff.h  Blending.h  Debug.cpp  Debug.h  GPUController.cpp  GPUController.h  GPUForThisApp.cpp  GPUForThisApp.h  GPUFuncs.cpp  GPUFuncs.h  Gaussian.cu  GaussianDoublePassH.cl  GaussianDoublePassV.cl  GraphicsViewTests.vcxproj  GraphicsViewTests.vcxproj.filters  HUD.Path.cpp  HUD.Path.h  HUDHandlePath.cpp  HUDHandlePath.h  Image.LineSimplification.h  Image.ToolPaintUtilities.h  Image.Utilities.h  Image.UtilitiesMultiThreaded.h  ImageDebugger.cpp  ImageDebugger.h  Math.Fast.h  NoneBlend.cl  NoneBlendPixelToImage.cl  NormalBlend.cl  NormalBlendPixelToImage.cl  PaintToolBase.cpp  PaintToolBase.h  PointData.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  ShapeBase.cpp  ShapeBase.h  (+42 more)
GraphicsViewTests/GeneratedFiles/: qrc_cMainWindow.cpp  ui_cMainWindow.h  ui_tablettest.h
GraphicsViewTests/Resources/: lapinGridBenchmarkSize.tvpp
GraphicsViewTests/Shaders/: GaussianDoublePassH.cl  GaussianDoublePassV.cl  NoneBlend.cl  NoneBlendPixelToImage.cl  NormalBlend.cl  NormalBlendMore.cl  NormalBlendPixelToImage.cl  NormalBlendSameSize.cl  Sum.cu  Tests.cl  TransformationNN.cl  TransformationNN.cl.vv
GraphicsViewTests/src/: Canvas.cpp  Canvas.h  Clip.cpp  Clip.h  CurveBase.cpp  CurveBase.h  CurveTests.h  EditableItem.cpp  EditableItem.h  ToolModel.cpp  ToolModel.h  ToolSelection.cpp  ToolSelection.h  ToolSelectionRectangle.cpp  ToolSelectionRectangle.h  ToolSimpleBrush.cpp  ToolSimpleBrush.h  Undoable.h  cCurrentFrameItem.h  cCustomGraphicsView.cpp  cCustomGraphicsView.h  cGraphicItem.h  cLayer.cpp  cLayer.h
GraphicsViewTests/tester/: tablettest.ui  tablettester.cpp  tablettester.h
